--- a/mioConsumer/nbproject/private/private.properties
+++ b/mioConsumer/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\pirolo_davide\\AppData\\Roaming\\NetBeans\\11.0\\build.properties
+user.properties.file=C:\\Users\\Davide\\AppData\\Roaming\\NetBeans\\11.0\\build.properties
