--- a/mioConsumer/nbproject/project.properties
+++ b/mioConsumer/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=mioConsumer
+application.vendor=Davide
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,7 +33,9 @@ dist.jar=${dist.dir}/mioConsumer.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/mioConsumer
+endorsed.classpath=
 excludes=
+file.reference.json-simple-1.1.jar=lib/json-simple-1.1.jar
 includes=**
 jar.compress=false
 javac.classpath=
@@ -40,8 +43,10 @@ javac.classpath=
 javac.compilerargs=
 javac.deprecation=false
 javac.external.vm=true
-javac.modulepath=
-javac.processormodulepath=
+javac.modulepath=\
+    ${file.reference.json-simple-1.1.jar}
+javac.processormodulepath=\
+    ${file.reference.json-simple-1.1.jar}
 javac.processorpath=\
     ${javac.classpath}
 javac.source=1.8
@@ -50,7 +55,8 @@ javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
 javac.test.modulepath=\
-    ${javac.modulepath}
+    ${javac.modulepath}:\
+    ${file.reference.json-simple-1.1.jar}
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
@@ -84,12 +90,14 @@ run.classpath=\
 # To set system properties for unit tests define test-sys-prop.name=value:
 run.jvmargs=
 run.modulepath=\
-    ${javac.modulepath}
+    ${javac.modulepath}:\
+    ${file.reference.json-simple-1.1.jar}
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
 run.test.modulepath=\
-    ${javac.test.modulepath}
+    ${javac.test.modulepath}:\
+    ${file.reference.json-simple-1.1.jar}
 source.encoding=UTF-8
 src.dir=src
 test.src.dir=test
